# tensorflow-dev-certification-practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: stopwords.txt
image/: README.md  multi_class_classifier.py  transfer_learning.py
image/notebooks/: cats_dogs_augmentation.ipynb  horses_humans_transfer_learning.ipynb  multi_class_classifier.ipynb
nlp/: BBC_news_archive_embeddings.py  README.md  imdb_reviews.py  stanford_corpus_embeddings_lstm.py  text_generation_irish_lyrics.py
nlp/notebooks/: Avoid_overfitting_in_NLP.ipynb  BBC_news_archive_embeddings.ipynb  BBC_news_archive_sentiment.ipynb  vecs.tsv
timeseries/: LSTM_synthetic_ts_data.py  README.md  real_world_sunspot_data.py
timeseries/notebooks/: LSTM_time_series.ipynb  real_world_sunspot_data.ipynb
utils/: accuracy_loss.py  augmentation.py  callback.py  io_preprocessing.py  plotting.py  time_series_components.py
