[tool.poetry]
name = "tensorflow-dev-certification-practice"
version = "0.1.0"
description = "repo for tensorflow developer cert"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
pandas = "^2.2.2"
tensorflow = "2.13"
tensorflow-datasets = "*"
scipy = "^1.13.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
